@@ -1,0 +1,5 @@
+dminiwm
+config.h
+*.o
+*.swp
+*~
